fix wrong placement of points, fix layout issues with map overlay upload button placement, let overlays have a popup with name/title or a list of feature properties

--- a/jsapp/scss/components/_kobo.map.marker-colors.scss
+++ b/jsapp/scss/components/_kobo.map.marker-colors.scss
@@ -7,7 +7,6 @@
 .map-marker {
   border: 1px solid #FFF;
   border-radius: 50%;
-  position: relative;
 
   &.unselected {
     visibility: hidden;
@@ -16,7 +15,6 @@
   &.default-overlay-marker {
     background: rgba(0, 0, 0, 0.7);
     border: none;
-    cursor: grab;
     border-radius: 0;
   }
 }
